backend-services.tf
resource "aws_db_subnet_group" "vprofile-rds-subgroup" {
    name = "main"
    subnet_ids = [ module.vpc.private_subnets[0], module.vpc.private_subnets[1], module.vpc.private_subnets[2] ]
    tags = {
      Name = "Subnet group for RDS"
    }
}

resource "aws_elasticache_subnet_group" "vprofile-elasticache_subgroup" {
    name = "vprofile-elasticache_subgroup"
    subnet_ids = [ module.vpc.private_subnets[0], module.vpc.private_subnets[1], module.vpc.private_subnets[2] ]    
    tags = {
      Name = "Subnet group for Elasticache"
    }
}

resource "aws_db_instance" "vprofile_rds" {
    allocated_storage = 20
    storage_type = "gp2"
    engine = "mysql"
    engine_version = "5.7.40"
    db_name = var.dbname
    username = var.dbuser
    password = var.dbpass
    instance_class = "db.t2.micro"
    parameter_group_name = "default.mysql5.7"
    multi_az = "false"
    publicly_accessible = "false"
    skip_final_snapshot = true
    db_subnet_group_name = aws_db_subnet_group.vprofile-rds-subgroup.name
    vpc_security_group_ids = [ aws_security_group.vporfile-backend-sg.id ]

}

resource "aws_elasticache_cluster" "vprofile-cache" {
    cluster_id = "vprofile-cache"
    engine = "memcached"
    node_type = "cache.t2.micro"
    num_cache_nodes = 1
    parameter_group_name = "default.memcached1.6"
    port = 11211
    security_group_ids = [ aws_security_group.vporfile-backend-sg.id ]
    subnet_group_name = aws_elasticache_subnet_group.vprofile-elasticache_subgroup.name
}


resource "aws_mq_broker" "vprofile-rmq" {
    broker_name = "vprofile-rmq"
    engine_type = "ActiveMQ"
    engine_version = "5.15.0"
    host_instance_type = "mq.t2.micro"
    security_groups = [ aws_security_group.vporfile-backend-sg.id ]
    subnet_ids = [ module.vpc.private_subnets[0] ]

    user {
      username = var.rmquser
      password = var.rmqpass
    }
}
